@@ -26,7 +26,9 @@ on GitHub.
 
 ==== New Features and Improvements
 
-* ❓
+* Improve parallelism and reduce number of blocked threads used by
+  `HierarchicalTestEngine` implementations when parallel execution is enabled and the
+  global read-write lock is used.
 
 
 [[release-notes-5.10.4-junit-jupiter]]
@@ -42,7 +44,8 @@ on GitHub.
 
 ==== New Features and Improvements
 
-* ❓
+* Improve parallelism and reduce number of blocked threads in the presence of `@Isolated`
+  tests when parallel execution is enabled
 
 
 [[release-notes-5.10.4-junit-vintage]]
